--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     <script>
         // ⚠️ IMPORTANTE: Sostituisci questo URL con l'URL del tuo Cloudflare Worker
         // Dopo aver deployato il worker, otterrai un URL tipo: https://ai-chef-malbosca.tuoaccount.workers.dev
-        const CLOUDFLARE_WORKER_URL = 'https://ai-chef-malbosca.YOUR_ACCOUNT.workers.dev';
+        const CLOUDFLARE_WORKER_URL = 'https://ai-chef-malbosca.aziendamalbosca.workers.dev';
 
         // Cronologia conversazione
         let conversationHistory = [];
