--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
     <script>
         // Configurazione
-        const CLOUDFLARE_WORKER_URL = 'https://ai-chef-malbosca.emanuele-alberti154.workers.dev';
+        const CLOUDFLARE_WORKER_URL = 'https://ai-chef-malbosca.aziendamalbosca.workers.dev';
         let messageCount = 0;
         let emailCaptured = false;
         let conversationHistory = [];
